--- a/themes/grid/layouts/partials/nav.html
+++ b/themes/grid/layouts/partials/nav.html
@@ -13,6 +13,10 @@
                             <nav>
                                 <ul>
                                     <li class="active"><a href="{{.Site.BaseURL}}">Home</a></li>
+									<li class="active"><a href="https://emmakitchen.netlify.app/pages/contact/">Contact</a></li>
+									<li class="active"><a href="https://emmakitchen.netlify.app/pages/copyright/">Copyright</a></li>
+									<li class="active"><a href="https://emmakitchen.netlify.app/pages/dmca/">DMCA</a></li>
+									<li class="active"><a href="https://emmakitchen.netlify.app/pages/privacy-policy/">Privacy-Policy</a></li>
                                 </ul>
                             </nav>
                         </div><!-- Main Menu Start -->
@@ -24,6 +28,10 @@
                             <nav>
                                 <ul>
                                     <li class="active"><a href="{{.Site.BaseURL}}">Home</a></li>
+									<li class="active"><a href="https://emmakitchen.netlify.app/pages/contact/">Contact</a></li>
+									<li class="active"><a href="https://emmakitchen.netlify.app/pages/copyright/">Copyright</a></li>
+									<li class="active"><a href="https://emmakitchen.netlify.app/pages/dmca/">DMCA</a></li>
+									<li class="active"><a href="https://emmakitchen.netlify.app/pages/privacy-policy/">Privacy-Policy</a></li>
                                 </ul>
                             </nav>
                         </div>
