--- a/themes/grid/layouts/partials/nav - Copy.html
+++ b/themes/grid/layouts/partials/nav - Copy.html
@@ -13,16 +13,10 @@
                             <nav>
                                 <ul>
                                     <li class="active"><a href="{{.Site.BaseURL}}">Home</a></li>
-<li class="active">                 <li class="active"><div class="dropdown">
-  <button class="dropbtn">Pages</button>
-  <div class="dropdown-content">
-<a href="https://emmakitchen.netlify.app/pages/contact/">Contact</a>
-<a href="https://emmakitchen.netlify.app/pages/copyright/">Copyright</a>
-<a href="https://emmakitchen.netlify.app/pages/dmca/">DMCA</a>
-<a href="https://emmakitchen.netlify.app/pages/privacy-policy/">Privacy-Policy</a>
-  </div>
-</div>
-</li>
+									<li class="active"><a href="https://emmakitchen.netlify.app/pages/contact/">Contact</a></li>
+									<li class="active"><a href="https://emmakitchen.netlify.app/pages/copyright/">Copyright</a></li>
+									<li class="active"><a href="https://emmakitchen.netlify.app/pages/dmca/">DMCA</a></li>
+									<li class="active"><a href="https://emmakitchen.netlify.app/pages/privacy-policy/">Privacy-Policy</a></li>
                                 </ul>
                             </nav>
                         </div><!-- Main Menu Start -->
