--- a/themes/grid/layouts/partials/nav.html
+++ b/themes/grid/layouts/partials/nav.html
@@ -13,7 +13,7 @@
                             <nav>
                                 <ul>
                                     <li class="active"><a href="{{.Site.BaseURL}}">Home</a></li>
-<li class="active">                 <li class="active"><div class="dropdown">
+<li class="active">                 <div class="dropdown">
   <button class="dropbtn">Pages</button>
   <div class="dropdown-content">
 <a href="https://emmakitchen.netlify.app/pages/contact/">Contact</a>
@@ -22,7 +22,7 @@
 <a href="https://emmakitchen.netlify.app/pages/privacy-policy/">Privacy-Policy</a>
   </div>
 </div>
-</li>
+
                                 </ul>
                             </nav>
                         </div><!-- Main Menu Start -->
